--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "schoolaura",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ishantttgupta.github.io/EPR/",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@testing-library/dom": "^10.4.0",
@@ -19,6 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
